gateways/gw-self-managed-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: gloo-kgw
    gateway-proxy-id: gateway-proxy-kgw
    gloo: gateway-proxy-kgw
  name: gateway-proxy-kgw
  namespace: gloo-system
spec:
  progressDeadlineSeconds: 600
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      gateway-proxy-id: gateway-proxy-kgw
      gloo: gateway-proxy-kgw
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      annotations:
        checksum/gateway-proxy-envoy-config: 8452d3d2307c35657079d9d4b6f0fdbaa48defba43d79cafbb7c7875806970da
        prometheus.io/path: /metrics
        prometheus.io/port: "8081"
        prometheus.io/scrape: "true"
      creationTimestamp: null
      labels:
        gateway-proxy: live
        gateway-proxy-id: gateway-proxy-kgw
        gloo: gateway-proxy-kgw
    spec:
      containers:
      - args:
        - --disable-hot-restart
        image: quay.io/solo-io/gloo-ee-envoy-wrapper:1.17.3@sha256:5d1ddaf1548372acaae03d247c94628ac376e23a58c81892ad28a0ddcea376d2
        imagePullPolicy: IfNotPresent
        name: gateway-proxy
        ports:
        - containerPort: 8080
          name: http
          protocol: TCP
        - containerPort: 8443
          name: https
          protocol: TCP
        resources: {}
        securityContext:
          allowPrivilegeEscalation: false
          capabilities:
            drop:
            - ALL
          readOnlyRootFilesystem: true
          runAsNonRoot: true
          runAsUser: 10101
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
        volumeMounts:
        - mountPath: /etc/envoy
          name: envoy-config
        - mountPath: /etc/envoy/ssl
          name: gloo-mtls-certs
          readOnly: true
      - env:
        - name: POD_NAME
          valueFrom:
            fieldRef:
              apiVersion: v1
              fieldPath: metadata.name
        - name: POD_NAMESPACE
          valueFrom:
            fieldRef:
              apiVersion: v1
              fieldPath: metadata.namespace
        - name: GLOO_MTLS_SDS_ENABLED
          value: "true"
        - name: LOG_LEVEL
          value: info
        - name: START_STATS_SERVER
          value: "true"
        image: quay.io/solo-io/sds-ee:1.17.3@sha256:edab2c2b8bedffa3e07d5e1f7cbb6fcc4613a47b5b4351bbf37aa75d10f9f0aa
        imagePullPolicy: IfNotPresent
        name: sds
        ports:
        - containerPort: 8234
          name: sds
          protocol: TCP
        readinessProbe:
          failureThreshold: 3
          initialDelaySeconds: 3
          periodSeconds: 10
          successThreshold: 1
          tcpSocket:
            port: 8234
          timeoutSeconds: 1
        resources: {}
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
        volumeMounts:
        - mountPath: /etc/envoy/ssl
          name: gloo-mtls-certs
          readOnly: true
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext:
        fsGroup: 10101
        runAsUser: 10101
      serviceAccount: gateway-proxy
      serviceAccountName: gateway-proxy
      terminationGracePeriodSeconds: 30
      volumes:
      - configMap:
          defaultMode: 420
          # name: gateway-proxy-envoy-config
          name: gateway-proxy-envoy-config-kgw
        name: envoy-config
      - name: gloo-mtls-certs
        secret:
          defaultMode: 420
          secretName: gloo-mtls-certs
