gateways/gw-self-managed-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: gloo-kgw
    gateway-proxy-id: gateway-proxy-kgw
    gloo: gateway-proxy-kgw
  name: gateway-proxy-kgw
  namespace: gloo-system
spec:
  allocateLoadBalancerNodePorts: true
  # clusterIP: 10.108.31.53
  # clusterIPs:
  # - 10.108.31.53
  externalTrafficPolicy: Cluster
  internalTrafficPolicy: Cluster
  ipFamilies:
  - IPv4
  ipFamilyPolicy: SingleStack
  ports:
  - name: https
    # nodePort: 30431
    port: 443
    protocol: TCP
    targetPort: 8443
  - name: http
    # nodePort: 30664
    port: 80
    protocol: TCP
    targetPort: 8080
  selector:
    gateway-proxy: live
    gateway-proxy-id: gateway-proxy-kgw
  sessionAffinity: None
  type: LoadBalancer
