gateways/gw-self-managed.yaml
kind: Gateway
apiVersion: gateway.networking.k8s.io/v1
metadata:
  name: self-managed
  namespace: gloo-system
  annotations:
    gateway.gloo.solo.io/gateway-parameters-name: "self-managed"
spec:
  gatewayClassName: gloo-gateway
  listeners:
  - protocol: HTTP
    port: 80
    name: http
    allowedRoutes:
      namespaces:
        from: All
